--- a/views/result.slim
+++ b/views/result.slim
@@ -3,6 +3,8 @@ html
   head
     meta[http-equiv="Content-Type" content="text/html; charset=UTF-8"]
     title KusoDevBattle
+    link href="/starwars.css" rel="stylesheet" type="text/css"
   body
-    #tweet
-      img[src="/cache/#{@id}"]
+    #titles
+      #titlecontent
+        img#twitter[src="/cache/#{@id}"]
