--- a/views/result.slim
+++ b/views/result.slim
@@ -8,3 +8,5 @@ html
     #titles
       #titlecontent
         img#twitter[src="/cache/#{@id}"]
+    #car[style="position: absolute; margin: 0 auto; bottom: 0; left: 500px"]
+      img[src="/car_back.png" width="50%" height="50%"]
