--- a/views/result.slim
+++ b/views/result.slim
@@ -4,6 +4,28 @@ html
     meta[http-equiv="Content-Type" content="text/html; charset=UTF-8"]
     title KusoDevBattle
     link href="/starwars.css" rel="stylesheet" type="text/css"
+    style
+      | #titlecontent:after {
+          position: absolute;
+          display: block;
+          content: "";
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          animation: rainbow 1s infinite linear;
+          background-image: linear-gradient(135deg,
+                                            rgba(255,   0,   0, 0.5) 0%,
+                                            rgba(255, 255,   0, 0.5) 15%,
+                                            rgba(  0, 255,   0, 0.5) 30%,
+                                            rgba(  0, 255, 255, 0.5) 50%,
+                                            rgba(  0,   0, 255, 0.5) 65%,
+                                            rgba(255,   0, 255, 0.5) 80%,
+                                            rgba(255,   0,   0, 0.5) 100%);
+        @keyframes rainbow {
+            0%   { background-position:    0 0 }
+          100%   { background-position: 100% 0 }
+        }
   body
     #titles
       #titlecontent
